20260411: 架构归一，防止出现分布式单体